# tmp-master

./: .gitignore  1.1 - Training CNN.ipynb  1.2 - Plotting.ipynb  1.3 - Model x Image.ipynb  cnn_size=128.json  cnn_size=16.json  cnn_size=256.json  cnn_size=32.json  cnn_size=64.ks3.json  crnn.py  ctc.py  data.json  datamodule.py  decode.py  env.yaml  metrics.py  model.py  pyproject.toml  size2size.json  size_train.py  tuner.py  vocab.txt
data/: cnn_size=64.json  size2labels.json
notebooks/: 1.0 - Doing Images.ipynb  1.1 - Training CNN.ipynb  1.2 - Plotting.ipynb  1.3 - Model x Image.ipynb  Deberta - Debug.ipynb  Deberta - Ignite.ipynb  Deberta - Other CNN.ipynb  Deberta - Tokenizer.ipynb  Github ViT  Tokens - Ignite.ipynb  Github ViT - Ignite.ipynb  Github ViT CTC - Ignite.ipynb  IAM - Tokenizer.ipynb  IAM - datamodule.ipynb  IAM_Github_Roberta_Ignite.ipynb  IIIT5K - Preprocess.ipynb  IIIT5K - Tokenizer.ipynb  IIIT5k - Deberta.ipynb  SVT - Deberta.ipynb  SVT - Preprocess.ipynb  SVT - Tokenizer.ipynb  SYNTH - CNN.ipynb  SYNTH - Find broken loss.ipynb  SYNTH - Find largest image.ipynb  SYNTH - Remove broken images.ipynb  SYNTH - Tokenizer.ipynb  Subword Tokenizer.ipynb  iam-vocab.json  iam-vocab.txt  iiit5k-vocab.json  iiit5k-vocab.txt  svt-vocab.json  svt-vocab.txt  synth-training-crnn-looped.py  synth-training-tr-looped.py  synth-training-tr.py  synth-training.py  synth-vocab.json  vitstr.py
tmpmaster/: convmaxpool.py  ctc.py
tmpmaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trainer/: cnn.py  ctc.py  datamodule.py  dataset.py  igmetrics.py  (+5 more)
(+26 files in other folders)
